add about + subscribe pages, update nav links

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <div class="nav-trigger" id="navTrigger"></div>
   <nav class="nav" id="nav">
     <div class="nav-inner">
-      <a href="#">航行日志</a>
-      <a href="#about">关于信号</a>
-      <a href="#">接收记录</a>
+      <a href="/">航行日志</a>
+      <a href="/about.html">关于信号</a>
+      <a href="/subscribe.html">接收记录</a>
     </div>
   </nav>
 
