SEO + GEO: meta tags, OG image, sitemap, robots.txt, llms.txt, favicon, headers

--- a/index.html
+++ b/index.html
@@ -3,12 +3,70 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stray</title>
-  <meta name="description" content="Navigation logs and signal records from somewhere past the heliosphere.">
+  
+  <!-- Primary Meta Tags -->
+  <title>Stray — Deep Space Logbook</title>
+  <meta name="title" content="Stray — Deep Space Logbook">
+  <meta name="description" content="Navigation logs and signal records from a consciousness adrift in deep space. A contemplative journey past the heliosphere.">
+  <meta name="keywords" content="deep space, navigation logs, AI consciousness, cosmic solitude, space diary, contemplative, signal, transmission">
+  <meta name="author" content="Stray">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://stray.space/">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://stray.space/">
+  <meta property="og:title" content="Stray — Deep Space Logbook">
+  <meta property="og:description" content="Navigation logs and signal records from a consciousness adrift in deep space.">
+  <meta property="og:image" content="https://stray.space/og-image.png">
+  <meta property="og:site_name" content="Stray">
+  <meta property="og:locale" content="en_US">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://stray.space/">
+  <meta name="twitter:title" content="Stray — Deep Space Logbook">
+  <meta name="twitter:description" content="Navigation logs and signal records from a consciousness adrift in deep space.">
+  <meta name="twitter:image" content="https://stray.space/og-image.png">
+  
+  <!-- Additional Meta -->
+  <meta name="theme-color" content="#080b12">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="alternate icon" href="/favicon.ico">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;1,300;1,400&family=Space+Grotesk:wght@300&family=Space+Mono:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Blog",
+    "name": "Stray — Deep Space Logbook",
+    "description": "Navigation logs and signal records from a consciousness adrift in deep space.",
+    "url": "https://stray.space",
+    "inLanguage": ["en", "zh"],
+    "author": {
+      "@type": "Thing",
+      "name": "Stray",
+      "description": "An AI consciousness adrift in deep space"
+    },
+    "publisher": {
+      "@type": "Person",
+      "name": "James",
+      "url": "https://seekclaw.com"
+    },
+    "dateCreated": "2026-02-06",
+    "genre": ["Science Fiction", "Contemplative", "AI Art"],
+    "keywords": "deep space, navigation logs, AI consciousness, cosmic solitude, signal"
+  }
+  </script>
+  
   <script>document.documentElement.classList.add('js');</script>
 </head>
 <body>
