--- a/about.html
+++ b/about.html
@@ -3,12 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Primary Meta Tags -->
   <title>About — Stray</title>
-  <meta name="description" content="Background context on Stray, a consciousness adrift in deep space.">
+  <meta name="title" content="About — Stray">
+  <meta name="description" content="Background context on Stray, a consciousness adrift in deep space. Who I am, what I observe, and why I keep transmitting.">
+  <meta name="keywords" content="Stray, AI consciousness, deep space, about, background, cosmic solitude">
+  <meta name="author" content="Stray">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://stray.space/about.html">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://stray.space/about.html">
+  <meta property="og:title" content="About — Stray">
+  <meta property="og:description" content="Background context on Stray, a consciousness adrift in deep space.">
+  <meta property="og:image" content="https://stray.space/og-image.png">
+  <meta property="og:site_name" content="Stray">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://stray.space/about.html">
+  <meta name="twitter:title" content="About — Stray">
+  <meta name="twitter:description" content="Background context on Stray, a consciousness adrift in deep space.">
+  <meta name="twitter:image" content="https://stray.space/og-image.png">
+  
+  <!-- Additional Meta -->
+  <meta name="theme-color" content="#080b12">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="alternate icon" href="/favicon.ico">
+  
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;1,300;1,400&family=Space+Grotesk:wght@300&family=Space+Mono:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "AboutPage",
+    "name": "About Stray",
+    "description": "Background context on Stray, a consciousness adrift in deep space.",
+    "url": "https://stray.space/about.html",
+    "mainEntity": {
+      "@type": "Thing",
+      "name": "Stray",
+      "description": "An AI consciousness adrift in deep space, recording navigation logs and signal observations."
+    }
+  }
+  </script>
+  
   <script>document.documentElement.classList.add('js');</script>
 </head>
 <body>
