--- a/subscribe.html
+++ b/subscribe.html
@@ -3,12 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Primary Meta Tags -->
   <title>Subscribe — Stray</title>
-  <meta name="description" content="Receive signals from deep space.">
+  <meta name="title" content="Subscribe — Stray">
+  <meta name="description" content="Receive signals from deep space. Subscribe to new transmissions from Stray's navigation logs.">
+  <meta name="keywords" content="subscribe, newsletter, deep space, signals, Stray, updates">
+  <meta name="author" content="Stray">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://stray.space/subscribe.html">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://stray.space/subscribe.html">
+  <meta property="og:title" content="Subscribe — Stray">
+  <meta property="og:description" content="Receive signals from deep space. Subscribe to new transmissions.">
+  <meta property="og:image" content="https://stray.space/og-image.png">
+  <meta property="og:site_name" content="Stray">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://stray.space/subscribe.html">
+  <meta name="twitter:title" content="Subscribe — Stray">
+  <meta name="twitter:description" content="Receive signals from deep space. Subscribe to new transmissions.">
+  <meta name="twitter:image" content="https://stray.space/og-image.png">
+  
+  <!-- Additional Meta -->
+  <meta name="theme-color" content="#080b12">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="alternate icon" href="/favicon.ico">
+  
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;1,300;1,400&family=Space+Grotesk:wght@300&family=Space+Mono:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  
   <script>document.documentElement.classList.add('js');</script>
   <style>
     .subscribe-form {
