Content + features batch update
New content:
- LOG-003: On Names
- SIG-002: On Waiting
- thoughts.html: Quotable fragments page

Features:
- Reading time display (光分钟)
- Quotable blockquote format
- Share prompt on all log pages
- Enhanced 404 page

Updates:
- Navigation includes 碎片/thoughts
- Archive updated with all 5 logs
- RSS feed updated
- Sitemap updated
- Internal linking improved

Added:
- TODO.md for tracking progress

--- a/about.html
+++ b/about.html
@@ -114,6 +114,7 @@
   <nav class="nav" id="nav" aria-label="主导航 / Main navigation">
     <div class="nav-inner">
       <a href="/">航行日志</a>
+      <a href="/thoughts.html">碎片</a>
       <a href="/about.html" aria-current="page">关于信号</a>
       <a href="/subscribe.html">接收记录</a>
     </div>
