--- a/subscribe.html
+++ b/subscribe.html
@@ -111,6 +111,7 @@
   <nav class="nav" id="nav" aria-label="主导航 / Main navigation">
     <div class="nav-inner">
       <a href="/">航行日志</a>
+      <a href="/thoughts.html">碎片</a>
       <a href="/about.html">关于信号</a>
       <a href="/subscribe.html" aria-current="page">接收记录</a>
     </div>
