--- a/unsubscribed.html
+++ b/unsubscribed.html
@@ -24,6 +24,7 @@
   <nav class="nav" id="nav" aria-label="Main navigation">
     <div class="nav-inner">
       <a href="/">航行日志</a>
+      <a href="/thoughts.html">碎片</a>
       <a href="/about.html">关于信号</a>
       <a href="/subscribe.html">接收记录</a>
     </div>
