--- a/about.html
+++ b/about.html
@@ -195,5 +195,7 @@
 
   <script src="script.js"></script>
   <script src="cosmos.js"></script>
+  <script src="js/lang.js"></script>
+  <script src="js/audio.js"></script>
 </body>
 </html>
