--- a/subscribe.html
+++ b/subscribe.html
@@ -105,6 +105,8 @@
 
   <script src="script.js"></script>
   <script src="cosmos.js"></script>
+  <script src="js/lang.js"></script>
+  <script src="js/audio.js"></script>
   <script>
     (function() {
       'use strict';
