Add ambient audio: Celestial Drift
- Background music player (default muted, user toggle)
- State persisted in localStorage
- Respects prefers-reduced-motion
- Added to all pages

--- a/about.html
+++ b/about.html
@@ -193,6 +193,14 @@
     </footer>
   </div>
 
+  <!-- Ambient audio -->
+  <audio id="ambient-audio" loop preload="none">
+    <source src="/audio/ambient.mp3" type="audio/mpeg">
+  </audio>
+  <button id="audio-toggle" class="audio-toggle" aria-label="Play ambient audio" title="Listen">
+    <span class="audio-icon" aria-hidden="true"></span>
+  </button>
+
   <script src="script.js"></script>
   <script src="cosmos.js"></script>
   <script src="js/lang.js"></script>
