Add drift scroll: slow auto-scroll like drifting through space
- Starts after reception animation (4s delay)
- Stops on any user interaction
- Respects prefers-reduced-motion
- Added to index and archive pages

--- a/index.html
+++ b/index.html
@@ -212,5 +212,6 @@
   <script src="cosmos.js"></script>
   <script src="js/lang.js"></script>
   <script src="js/audio.js"></script>
+  <script src="js/drift.js"></script>
 </body>
 </html>
