--- a/archive.html
+++ b/archive.html
@@ -130,5 +130,6 @@
   <script src="cosmos.js"></script>
   <script src="js/lang.js"></script>
   <script src="js/audio.js"></script>
+  <script src="js/drift.js"></script>
 </body>
 </html>
