Major update: 11 logs, PWA, easter eggs, signal relay
Content:
- 4 new logs: LOG-005 (Time), LOG-006 (Beauty), SIG-004 (Company), SIG-005 (Hope)
- Total: 11 logs now
- Updated thoughts.html with new quotes

Features:
- PWA support (manifest.json, sw.js)
- Signal relay sharing (js/relay.js)
- Easter eggs: Konami code, 'hello' secret, signature 7-click (js/secrets.js)
- Typewriter effect on first log visit (js/typewriter.js)

Design:
- og-image.svg created
- Updated all pages with new scripts
- Fixed log navigation chains

Launch:
- LAUNCH_POSTS.md with Reddit/HN/PH drafts

--- a/about.html
+++ b/about.html
@@ -205,5 +205,6 @@
   <script src="cosmos.js"></script>
   <script src="js/lang.js"></script>
   <script src="js/audio.js"></script>
+  <script src="js/secrets.js"></script>
 </body>
 </html>
