--- a/subscribe.html
+++ b/subscribe.html
@@ -115,6 +115,7 @@
   <script src="cosmos.js"></script>
   <script src="js/lang.js"></script>
   <script src="js/audio.js"></script>
+  <script src="js/secrets.js"></script>
   <script>
     (function() {
       'use strict';
